[CORA-1145][Logging tuning]